--- a/src/github/styles/vars-global.css
+++ b/src/github/styles/vars-global.css
@@ -25,6 +25,10 @@
 
   --color-link: var(--color-fg-accent);
   --color-danger: var(--color-fg-danger);
+
+  --svg-gap: 0.2em;
+  --svg-size: 1em;
+  --row-spacing: 0.5em;
   
   /* start of styles */
   line-height: 1.5;
@@ -32,6 +36,10 @@
   font-family: var(--font-family);
   font-size: var(--font-size-host);
   font-weight: var(--font-weight-normal);
+  /* set up container queries */
+  container-type: inline-size;
+  display: inline-block;
+  width: 100%;
 }
 
 /** root elements cleanup */
