--- a/src/github/styles/user.css
+++ b/src/github/styles/user.css
@@ -1,81 +1,77 @@
 /** styles for the GitHub user web component */
 
+:host {
+  container-name: user;
+}
 section[itemscope] {
   padding: auto;
 
   overflow-wrap: break-word;
   overflow-wrap: anywhere;
   overflow: hidden;
-  max-width: 30em;
-
 }
 :host header {
   background-color: var(--bg-color-light);
-  padding: 1em;
+  padding: var(--row-spacing);
 
   & a {
-    flex: 1 1 auto;
     display: flex;
-    gap: .5em;
+    gap: var(--svg-gap);
+    height: calc(var(--logo-size) + var(--logo-outline-offset) * 2);
 
     :has(svg) {
-      width: 2em;
-      height: 2em;
-      outline-offset: 2px;
+      flex: 0 0 var(--logo-size);
+      display: inline-block;
+      width: var(--logo-size);
+      height: var(--logo-size);
+      outline-offset: var(--logo-outline-offset);
   
       > svg {
         color: var(--color-normal);
-        width: 2em;
-        height: 2em;
+        width: var(--logo-size);
+        height: var(--logo-size);
         vertical-align: middle;
         fill: currentColor;
       }
     }
 
     [itemprop="alternativeName"] {
+      flex: 1 0 auto;
       color: var(--color-normal);
       font-weight: var(--font-weight-bold);
-      padding-inline: .5em;
-      padding-block: .375em;
+      padding-inline: var(--row-spacing);
     }
   }
 }
 [part="main"] {
-  padding: 0 1em 1em;
-  margin-top: 2em;
+  padding: var(--row-spacing);
 
   [itemprop="url"] {
-    flex: 1 1 auto;
-    display: flex;
-    gap: .5em;
+    display: block;
+    text-align: center;
     align-items: center;
-    margin-bottom: 1.5em;
+    padding: calc(var(--row-spacing) * 2) 0;
 
     [itemprop="image"] {
-      flex-shrink: 0;
-      margin-right: 1em;
-      width: 16.66666666%;
-      display: inline-block;
+      display: block;
+      width: 100%;
 
       & img {
-        /* box-shadow: 0 0 0 1px var(--avatar-borderColor, var(--border-color)); */
         border: var(--border-width) solid var(--border-color);
         border-radius: 50%;
         line-height: 1;
-        width: 100%;
+        width: 70%;
         height: auto;
-        vertical-align: middle;
+        margin: 0 auto;
       }
     }
 
     [itemprop="creator"] {
-      width: 100%;
       color: var(--color-normal);
-      padding-left: 2em;
 
       & span {
         display: block;
-        font-size: 24px;
+        font-size: var(--font-size-title);
         line-height: 1.25;
         white-space: nowrap;
         overflow: hidden;
@@ -85,32 +81,66 @@ section[itemscope] {
 
       [itemprop="alternativeName"] {
         color: var(--color-light);
-        font-size: 20px;
+        font-size: var(--font-size-bold);
         font-style: normal;
         font-weight: var(--font-weight-light);
-        line-height: 24px;
+        line-height: 1.25;
+      }
+    }
+  }
+  
+  @container user (min-width: 400px) {
+    [itemprop="url"] {
+      display: flex;
+      gap: 1em;
+
+      [itemprop="image"] {
+        flex: 1 1 30%;
+      }
+      [itemprop="creator"] {
+        flex: 1 0 70%;
+        text-align: left;
       }
     }
   }
 
   [itemprop="description"] {
-    margin-bottom: 1.5em;
+    margin: calc(var(--row-spacing) * 2) 0;
   }
 
-  & dl:has([itemprop="follows"]) {
-    direction: rtl;
-    text-align: left;
-    margin-bottom: 1.5em;    
+  & dl:has([itemprop="follows"]),
+  & dl:has([itemprop="followee"]) {
+    display: flex;
+    flex-direction: row-reverse;
+    flex-wrap: wrap;
+    gap: var(--svg-gap);
 
-    & dt, & dd {
-      display: inline-block;
-    }
-    & dt {
+    > dt {
+      flex: 1 0 auto;
       color: var(--color-light);
     }
-    :is([aria-hidden="true"]):has(svg) svg {
-      fill: var(--color-light);
-      vertical-align: text-bottom;
+
+    > dd {
+      flex: 0 0 auto;
+      > svg {
+        fill: var(--color-light);
+        vertical-align: text-bottom;
+      }
+    }
+  }
+  @container user (min-width: 300px) {
+    :is(dl:has([itemprop="followee"])) {
+      display: inline-flex;
+    }
+    & dl:has([itemprop="followee"]) + dl:has([itemprop="follows"]) {
+      display: inline-flex;
+
+      > dd::before {
+        content: ' · ';
+      }
+      > dd svg {
+        display: none;
+      }
     }
   }
   & dl:has(github-repository) {
