--- a/src/github/styles/repository.css
+++ b/src/github/styles/repository.css
@@ -4,12 +4,12 @@
   container-name: repository;
 }
 
-section[itemscope] {
+div[itemscope] {
   padding: var(--row-spacing);
 }
 
 @container repository (min-width: 300px) {
-  section[itemscope] {
+  div[itemscope] {
     padding: calc(var(--row-spacing) * 2);
   }
 }
@@ -42,9 +42,6 @@ dl {
 
   > dt {
     flex: 0 0 var(--svg-size);
-    > span {
-      display: none;
-    }
     > svg {
       vertical-align: text-bottom;
     }
