--- a/src/github/styles/vars-primer.css
+++ b/src/github/styles/vars-primer.css
@@ -1,15 +1,178 @@
 /** This file is auto-generated, do not edit **/
 
 /* Global primer styles */
-:host {  --fontStack-system: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Noto Sans', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji';  --base-text-weight-light: 300;  --base-text-weight-normal: 400;  --base-text-weight-medium: 500;  --base-text-weight-semibold: 600;  --borderWidth-thin: max(1px, 0.0625rem);  --borderWidth-thick: max(2px, 0.125rem);  --borderRadius-small: 3px;  --borderRadius-medium: 6px;}
+:host {
+  --fontStack-system: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Noto Sans', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji';
+  --base-text-weight-light: 300;
+  --base-text-weight-normal: 400;
+  --base-text-weight-medium: 500;
+  --base-text-weight-semibold: 600;
+  --borderWidth-thin: max(1px, 0.0625rem);
+  --borderWidth-thick: max(2px, 0.125rem);
+  --borderRadius-small: 3px;
+  --borderRadius-medium: 6px;
 
-/* Default Theme (Dark) */:host {  --color-avatar-border: rgba(240,246,252,0.1);  --color-border-default: #30363d;  --color-canvas-default: #0d1117;  --color-canvas-subtle: #161b22;  --color-fg-default: #e6edf3;  --color-fg-muted: #7d8590;  --color-fg-subtle: #6e7681;  --color-fg-onemphasis: #ffffff;  --color-fg-accent: #2f81f7;  --color-fg-danger: #f85149;}
-/* Light Theme */:host([data-theme="light"]) {  --color-avatar-border: rgba(31,35,40,0.15);  --color-border-default: #d0d7de;  --color-canvas-default: #ffffff;  --color-canvas-subtle: #f6f8fa;  --color-fg-default: #1F2328;  --color-fg-muted: #656d76;  --color-fg-subtle: #6e7781;  --color-fg-onemphasis: #ffffff;  --color-fg-accent: #0969da;  --color-fg-danger: #d1242f;}
-/* Light Protanopia & Deuteranopia Theme */:host([data-theme="light_colorblind"]) {  --color-avatar-border: rgba(27,31,36,0.15);  --color-border-default: #d0d7de;  --color-canvas-default: #ffffff;  --color-canvas-subtle: #f6f8fa;  --color-fg-default: #24292f;  --color-fg-muted: #57606a;  --color-fg-subtle: #6e7781;  --color-fg-onemphasis: #ffffff;  --color-fg-accent: #0969da;  --color-fg-danger: #b35900;}
-/* Light Tritanopia Theme */:host([data-theme="light_tritanopia"]) {  --color-avatar-border: rgba(27,31,36,0.15);  --color-border-default: #d0d7de;  --color-canvas-default: #ffffff;  --color-canvas-subtle: #f6f8fa;  --color-fg-default: #24292f;  --color-fg-muted: #57606a;  --color-fg-subtle: #6e7781;  --color-fg-onemphasis: #ffffff;  --color-fg-accent: #0969da;  --color-fg-danger: #cf222e;}
-/* Light High Contrast Theme */:host([data-theme="light_high_contrast"]) {  --color-avatar-border: rgba(1,4,9,0.8);  --color-border-default: #20252c;  --color-canvas-default: #ffffff;  --color-canvas-subtle: #e7ecf0;  --color-fg-default: #0e1116;  --color-fg-muted: #0e1116;  --color-fg-subtle: #66707b;  --color-fg-onemphasis: #ffffff;  --color-fg-accent: #0349b4;  --color-fg-danger: #d1242f;}
-/* Dark Theme */:host([data-theme="dark"]) {  --color-avatar-border: rgba(240,246,252,0.1);  --color-border-default: #30363d;  --color-canvas-default: #0d1117;  --color-canvas-subtle: #161b22;  --color-fg-default: #e6edf3;  --color-fg-muted: #7d8590;  --color-fg-subtle: #6e7681;  --color-fg-onemphasis: #ffffff;  --color-fg-accent: #2f81f7;  --color-fg-danger: #f85149;}
-/* Dark Dimmed Theme */:host([data-theme="dark_dimmed"]) {  --color-avatar-border: rgba(205,217,229,0.1);  --color-border-default: #444c56;  --color-canvas-default: #22272e;  --color-canvas-subtle: #2d333b;  --color-fg-default: #adbac7;  --color-fg-muted: #768390;  --color-fg-subtle: #636e7b;  --color-fg-onemphasis: #cdd9e5;  --color-fg-accent: #539bf5;  --color-fg-danger: #e5534b;}
-/* Dark Protanopia & Deuteranopia Theme */:host([data-theme="dark_colorblind"]) {  --color-avatar-border: rgba(240,246,252,0.1);  --color-border-default: #30363d;  --color-canvas-default: #0d1117;  --color-canvas-subtle: #161b22;  --color-fg-default: #c9d1d9;  --color-fg-muted: #8b949e;  --color-fg-subtle: #6e7681;  --color-fg-onemphasis: #ffffff;  --color-fg-accent: #58a6ff;  --color-fg-danger: #d47616;}
-/* Dark Tritanopia Theme */:host([data-theme="dark_tritanopia"]) {  --color-avatar-border: rgba(240,246,252,0.1);  --color-border-default: #30363d;  --color-canvas-default: #0d1117;  --color-canvas-subtle: #161b22;  --color-fg-default: #c9d1d9;  --color-fg-muted: #8b949e;  --color-fg-subtle: #6e7681;  --color-fg-onemphasis: #ffffff;  --color-fg-accent: #58a6ff;  --color-fg-danger: #f85149;}
-/* Dark High Contrast Theme */:host([data-theme="dark_high_contrast"]) {  --color-avatar-border: rgba(255,255,255,0.9);  --color-border-default: #7a828e;  --color-canvas-default: #0a0c10;  --color-canvas-subtle: #272b33;  --color-fg-default: #f0f3f6;  --color-fg-muted: #f0f3f6;  --color-fg-subtle: #9ea7b3;  --color-fg-onemphasis: #0a0c10;  --color-fg-accent: #71b7ff;  --color-fg-danger: #ff6a69;}
+  /* SVG & Octicon styles */
+  --svg-circle: url('data:image/svg+xml, <svg width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"><circle cx="8" cy="8" r="8"></circle></svg>');
+  --svg-repo-forked: url('data:image/svg+xml, <svg width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"><path d="M5 5.372v.878c0 .414.336.75.75.75h4.5a.75.75 0 0 0 .75-.75v-.878a2.25 2.25 0 1 1 1.5 0v.878a2.25 2.25 0 0 1-2.25 2.25h-1.5v2.128a2.251 2.251 0 1 1-1.5 0V8.5h-1.5A2.25 2.25 0 0 1 3.5 6.25v-.878a2.25 2.25 0 1 1 1.5 0ZM5 3.25a.75.75 0 1 0-1.5 0 .75.75 0 0 0 1.5 0Zm6.75.75a.75.75 0 1 0 0-1.5.75.75 0 0 0 0 1.5Zm-3 8.75a.75.75 0 1 0-1.5 0 .75.75 0 0 0 1.5 0Z"></path></svg>');
+  --svg-repo: url('data:image/svg+xml, <svg width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"><path d="M2 2.5A2.5 2.5 0 0 1 4.5 0h8.75a.75.75 0 0 1 .75.75v12.5a.75.75 0 0 1-.75.75h-2.5a.75.75 0 0 1 0-1.5h1.75v-2h-8a1 1 0 0 0-.714 1.7.75.75 0 1 1-1.072 1.05A2.495 2.495 0 0 1 2 11.5Zm10.5-1h-8a1 1 0 0 0-1 1v6.708A2.486 2.486 0 0 1 4.5 9h8ZM5 12.25a.25.25 0 0 1 .25-.25h3.5a.25.25 0 0 1 .25.25v3.25a.25.25 0 0 1-.4.2l-1.45-1.087a.249.249 0 0 0-.3 0L5.4 15.7a.25.25 0 0 1-.4-.2Z"></path></svg>');
+  --svg-star: url('data:image/svg+xml, <svg width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"><path d="M8 .25a.75.75 0 0 1 .673.418l1.882 3.815 4.21.612a.75.75 0 0 1 .416 1.279l-3.046 2.97.719 4.192a.751.751 0 0 1-1.088.791L8 12.347l-3.766 1.98a.75.75 0 0 1-1.088-.79l.72-4.194L.818 6.374a.75.75 0 0 1 .416-1.28l4.21-.611L7.327.668A.75.75 0 0 1 8 .25Zm0 2.445L6.615 5.5a.75.75 0 0 1-.564.41l-3.097.45 2.24 2.184a.75.75 0 0 1 .216.664l-.528 3.084 2.769-1.456a.75.75 0 0 1 .698 0l2.77 1.456-.53-3.084a.75.75 0 0 1 .216-.664l2.24-2.183-3.096-.45a.75.75 0 0 1-.564-.41L8 2.694Z"></path></svg>');
+  --svg-eye: url('data:image/svg+xml, <svg width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"><path d="M8 2c1.981 0 3.671.992 4.933 2.078 1.27 1.091 2.187 2.345 2.637 3.023a1.62 1.62 0 0 1 0 1.798c-.45.678-1.367 1.932-2.637 3.023C11.67 13.008 9.981 14 8 14c-1.981 0-3.671-.992-4.933-2.078C1.797 10.83.88 9.576.43 8.898a1.62 1.62 0 0 1 0-1.798c.45-.677 1.367-1.931 2.637-3.022C4.33 2.992 6.019 2 8 2ZM1.679 7.932a.12.12 0 0 0 0 .136c.411.622 1.241 1.75 2.366 2.717C5.176 11.758 6.527 12.5 8 12.5c1.473 0 2.825-.742 3.955-1.715 1.124-.967 1.954-2.096 2.366-2.717a.12.12 0 0 0 0-.136c-.412-.621-1.242-1.75-2.366-2.717C10.824 4.242 9.473 3.5 8 3.5c-1.473 0-2.825.742-3.955 1.715-1.124.967-1.954 2.096-2.366 2.717ZM8 10a2 2 0 1 1-.001-3.999A2 2 0 0 1 8 10Z"></path></svg>');
+  --svg-mark-github: url('data:image/svg+xml, <svg width="32" height="32" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"><path d="M8 0c4.42 0 8 3.58 8 8a8.013 8.013 0 0 1-5.45 7.59c-.4.08-.55-.17-.55-.38 0-.27.01-1.13.01-2.2 0-.75-.25-1.23-.54-1.48 1.78-.2 3.65-.88 3.65-3.95 0-.88-.31-1.59-.82-2.15.08-.2.36-1.02-.08-2.12 0 0-.67-.22-2.2.82-.64-.18-1.32-.27-2-.27-.68 0-1.36.09-2 .27-1.53-1.03-2.2-.82-2.2-.82-.44 1.1-.16 1.92-.08 2.12-.51.56-.82 1.28-.82 2.15 0 3.06 1.86 3.75 3.64 3.95-.23.2-.44.55-.51 1.07-.46.21-1.61.55-2.33-.66-.15-.24-.6-.83-1.23-.82-.67.01-.27.38.01.53.34.19.73.9.82 1.13.16.45.68 1.31 2.69.94 0 .67.01 1.3.01 1.49 0 .21-.15.45-.55.38A7.995 7.995 0 0 1 0 8c0-4.42 3.58-8 8-8Z"></path></svg>');
+  --svg-people: url('data:image/svg+xml, <svg width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"><path d="M2 5.5a3.5 3.5 0 1 1 5.898 2.549 5.508 5.508 0 0 1 3.034 4.084.75.75 0 1 1-1.482.235 4 4 0 0 0-7.9 0 .75.75 0 0 1-1.482-.236A5.507 5.507 0 0 1 3.102 8.05 3.493 3.493 0 0 1 2 5.5ZM11 4a3.001 3.001 0 0 1 2.22 5.018 5.01 5.01 0 0 1 2.56 3.012.749.749 0 0 1-.885.954.752.752 0 0 1-.549-.514 3.507 3.507 0 0 0-2.522-2.372.75.75 0 0 1-.574-.73v-.352a.75.75 0 0 1 .416-.672A1.5 1.5 0 0 0 11 5.5.75.75 0 0 1 11 4Zm-5.5-.5a2 2 0 1 0-.001 3.999A2 2 0 0 0 5.5 3.5Z"></path></svg>');
+}
+
+/* GitHub language colors */
+[data-detail="language"] {
+  background-color: #f1e05a;
+  &[data-language="Python"] { background-color: #3572A5; }
+  &[data-language="Java"] { background-color: #b07219; }
+  &[data-language="Go"] { background-color: #00ADD8; }
+  &[data-language="C++"] { background-color: #f34b7d; }
+  &[data-language="JavaScript"] { background-color: #f1e05a; }
+  &[data-language="TypeScript"] { background-color: #3178c6; }
+  &[data-language="PHP"] { background-color: #4F5D95; }
+  &[data-language="C"] { background-color: #555555; }
+  &[data-language="Ruby"] { background-color: #701516; }
+  &[data-language="C#"] { background-color: #178600; }
+  &[data-language="Shell"] { background-color: #89e051; }
+  &[data-language="Nix"] { background-color: #7e7eff; }
+  &[data-language="HTML"] { background-color: #e34c26; }
+  &[data-language="Rust"] { background-color: #dea584; }
+  &[data-language="Scala"] { background-color: #c22d40; }
+  &[data-language="Kotlin"] { background-color: #A97BFF; }
+  &[data-language="Swift"] { background-color: #F05138; }
+  &[data-language="Dart"] { background-color: #00B4AB; }
+  &[data-language="Jupyter Notebook"] { background-color: #DA5B0B; }
+  &[data-language="DM"] { background-color: #447265; }
+  &[data-language="HCL"] { background-color: #844FBA; }
+  &[data-language="Lua"] { background-color: #000080; }
+  &[data-language="Makefile"] { background-color: #427819; }
+  &[data-language="CSS"] { background-color: #563d7c; }
+  &[data-language="Groovy"] { background-color: #4298b8; }
+  &[data-language="Perl"] { background-color: #0298c3; }
+  &[data-language="Objective-C"] { background-color: #438eff; }
+  &[data-language="SystemVerilog"] { background-color: #DAE1C2; }
+  &[data-language="SCSS"] { background-color: #c6538c; }
+  &[data-language="Elixir"] { background-color: #6e4a7e; }
+}
+
+/* Default Theme (Dark) */:host {  --color-avatar-border: rgba(240,246,252,0.1);
+  --color-border-default: #30363d;
+  --color-canvas-default: #0d1117;
+  --color-canvas-subtle: #161b22;
+  --color-fg-default: #e6edf3;
+  --color-fg-muted: #7d8590;
+  --color-fg-subtle: #6e7681;
+  --color-fg-onemphasis: #ffffff;
+  --color-fg-accent: #2f81f7;
+  --color-fg-danger: #f85149;
+}
+/* Light Theme */:host([data-theme="light"]) {
+  --color-avatar-border: rgba(31,35,40,0.15);
+  --color-border-default: #d0d7de;
+  --color-canvas-default: #ffffff;
+  --color-canvas-subtle: #f6f8fa;
+  --color-fg-default: #1F2328;
+  --color-fg-muted: #656d76;
+  --color-fg-subtle: #6e7781;
+  --color-fg-onemphasis: #ffffff;
+  --color-fg-accent: #0969da;
+  --color-fg-danger: #d1242f;
+}
+/* Light Protanopia & Deuteranopia Theme */:host([data-theme="light_colorblind"]) {
+  --color-avatar-border: rgba(27,31,36,0.15);
+  --color-border-default: #d0d7de;
+  --color-canvas-default: #ffffff;
+  --color-canvas-subtle: #f6f8fa;
+  --color-fg-default: #24292f;
+  --color-fg-muted: #57606a;
+  --color-fg-subtle: #6e7781;
+  --color-fg-onemphasis: #ffffff;
+  --color-fg-accent: #0969da;
+  --color-fg-danger: #b35900;
+}
+/* Light Tritanopia Theme */:host([data-theme="light_tritanopia"]) {
+  --color-avatar-border: rgba(27,31,36,0.15);
+  --color-border-default: #d0d7de;
+  --color-canvas-default: #ffffff;
+  --color-canvas-subtle: #f6f8fa;
+  --color-fg-default: #24292f;
+  --color-fg-muted: #57606a;
+  --color-fg-subtle: #6e7781;
+  --color-fg-onemphasis: #ffffff;
+  --color-fg-accent: #0969da;
+  --color-fg-danger: #cf222e;
+}
+/* Light High Contrast Theme */:host([data-theme="light_high_contrast"]) {
+  --color-avatar-border: rgba(1,4,9,0.8);
+  --color-border-default: #20252c;
+  --color-canvas-default: #ffffff;
+  --color-canvas-subtle: #e7ecf0;
+  --color-fg-default: #0e1116;
+  --color-fg-muted: #0e1116;
+  --color-fg-subtle: #66707b;
+  --color-fg-onemphasis: #ffffff;
+  --color-fg-accent: #0349b4;
+  --color-fg-danger: #d1242f;
+}
+/* Dark Theme */:host([data-theme="dark"]) {
+  --color-avatar-border: rgba(240,246,252,0.1);
+  --color-border-default: #30363d;
+  --color-canvas-default: #0d1117;
+  --color-canvas-subtle: #161b22;
+  --color-fg-default: #e6edf3;
+  --color-fg-muted: #7d8590;
+  --color-fg-subtle: #6e7681;
+  --color-fg-onemphasis: #ffffff;
+  --color-fg-accent: #2f81f7;
+  --color-fg-danger: #f85149;
+}
+/* Dark Dimmed Theme */:host([data-theme="dark_dimmed"]) {
+  --color-avatar-border: rgba(205,217,229,0.1);
+  --color-border-default: #444c56;
+  --color-canvas-default: #22272e;
+  --color-canvas-subtle: #2d333b;
+  --color-fg-default: #adbac7;
+  --color-fg-muted: #768390;
+  --color-fg-subtle: #636e7b;
+  --color-fg-onemphasis: #cdd9e5;
+  --color-fg-accent: #539bf5;
+  --color-fg-danger: #e5534b;
+}
+/* Dark Protanopia & Deuteranopia Theme */:host([data-theme="dark_colorblind"]) {
+  --color-avatar-border: rgba(240,246,252,0.1);
+  --color-border-default: #30363d;
+  --color-canvas-default: #0d1117;
+  --color-canvas-subtle: #161b22;
+  --color-fg-default: #c9d1d9;
+  --color-fg-muted: #8b949e;
+  --color-fg-subtle: #6e7681;
+  --color-fg-onemphasis: #ffffff;
+  --color-fg-accent: #58a6ff;
+  --color-fg-danger: #d47616;
+}
+/* Dark Tritanopia Theme */:host([data-theme="dark_tritanopia"]) {
+  --color-avatar-border: rgba(240,246,252,0.1);
+  --color-border-default: #30363d;
+  --color-canvas-default: #0d1117;
+  --color-canvas-subtle: #161b22;
+  --color-fg-default: #c9d1d9;
+  --color-fg-muted: #8b949e;
+  --color-fg-subtle: #6e7681;
+  --color-fg-onemphasis: #ffffff;
+  --color-fg-accent: #58a6ff;
+  --color-fg-danger: #f85149;
+}
+/* Dark High Contrast Theme */:host([data-theme="dark_high_contrast"]) {
+  --color-avatar-border: rgba(255,255,255,0.9);
+  --color-border-default: #7a828e;
+  --color-canvas-default: #0a0c10;
+  --color-canvas-subtle: #272b33;
+  --color-fg-default: #f0f3f6;
+  --color-fg-muted: #f0f3f6;
+  --color-fg-subtle: #9ea7b3;
+  --color-fg-onemphasis: #0a0c10;
+  --color-fg-accent: #71b7ff;
+  --color-fg-danger: #ff6a69;
+}
