--- a/src/github/styles/user.css
+++ b/src/github/styles/user.css
@@ -169,7 +169,7 @@ section[itemscope] {
       }
     }
   }
-  & dl:has(github-repository) {
+  & dl:has(.repo) {
     margin-top: .5em;
     
     > dd {
