:memo: update devto for docs

--- a/src/devto/styles/styles.css
+++ b/src/devto/styles/styles.css
@@ -62,7 +62,8 @@ section[itemscope] {
 
       & span {
         position: absolute;
-        top: calc(var(--logo-size) * -2);
+        top: calc(var(--logo-size) * -3);
+        font-size: .1em;
       }
     }
 
