--- a/src/devto/styles/vars-devto.css
+++ b/src/devto/styles/vars-devto.css
@@ -6,13 +6,28 @@
   --svg-dev-logo: url('data:image/svg+xml, <svg xmlns="http://www.w3.org/2000/svg" width="28" height="32" viewBox="0 0 448 512"><path d="M120.12 208.29c-3.88-2.9-7.77-4.35-11.65-4.35H91.03v104.47h17.45c3.88 0 7.77-1.45 11.65-4.35 3.88-2.9 5.82-7.25 5.82-13.06v-69.65c-.01-5.8-1.96-10.16-5.83-13.06zM404.1 32H43.9C19.7 32 .06 51.59 0 75.8v360.4C.06 460.41 19.7 480 43.9 480h360.2c24.21 0 43.84-19.59 43.9-43.8V75.8c-.06-24.21-19.7-43.8-43.9-43.8zM154.2 291.19c0 18.81-11.61 47.31-48.36 47.25h-46.4V172.98h47.38c35.44 0 47.36 28.46 47.37 47.28l.01 70.93zm100.68-88.66H201.6v38.42h32.57v29.57H201.6v38.41h53.29v29.57h-62.18c-11.16.29-20.44-8.53-20.72-19.69V193.7c-.27-11.15 8.56-20.41 19.71-20.69h63.19l-.01 29.52zm103.64 115.29c-13.2 30.75-36.85 24.63-47.44 0l-38.53-144.8h32.57l29.71 113.72 29.57-113.72h32.58l-38.46 144.8z"/></svg>');
   --svg-cake-icon: url('data:image/svg+xml, <svg width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M8 6v3.999h3V6h2v3.999h3V6h2v3.999L19 10a3 3 0 012.995 2.824L22 13v1c0 1.014-.377 1.94-.999 2.645L21 21a1 1 0 01-1 1H4a1 1 0 01-1-1v-4.36a4.025 4.025 0 01-.972-2.182l-.022-.253L2 14v-1a3 3 0 012.824-2.995L5 10l1-.001V6h2zm11 6H5a1 1 0 00-.993.883L4 13v.971l.003.147a2 2 0 003.303 1.4c.363-.312.602-.744.674-1.218l.015-.153.005-.176c.036-1.248 1.827-1.293 1.989-.134l.01.134.004.147a2 2 0 003.992.031l.012-.282c.124-1.156 1.862-1.156 1.986 0l.012.282a2 2 0 003.99 0L20 14v-1a1 1 0 00-.883-.993L19 12zM7 1c1.32.871 1.663 2.088 1.449 2.888a1.5 1.5 0 11-2.898-.776C5.85 2.002 7 2.5 7 1zm5 0c1.32.871 1.663 2.088 1.449 2.888a1.5 1.5 0 01-2.898-.776C10.85 2.002 12 2.5 12 1zm5 0c1.32.871 1.663 2.088 1.449 2.888a1.5 1.5 0 01-2.898-.776C15.85 2.002 17 2.5 17 1z"/></svg>');
   --svg-post-icon: url('data:image/svg+xml, <svg width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M19 22H5a3 3 0 01-3-3V3a1 1 0 011-1h14a1 1 0 011 1v12h4v4a3 3 0 01-3 3zm-1-5v2a1 1 0 002 0v-2h-2zm-2 3V4H4v15a1 1 0 001 1h11zM6 7h8v2H6V7zm0 4h8v2H6v-2zm0 4h5v2H6v-2z"/></svg>');
+  --base: #090909;
 
   --white: 255, 255, 255;
   --black: 0, 0, 0;
   --radius: 0.375rem;
+  --base-inverted: rgb(var(--white));
+  --base-100: var(--base);
+  --base-90: #242424;
+  --base-80: #3d3d3d;
+  --base-70: #575757;
+  --base-60: #717171;
+  --base-50: #8a8a8a;
+  --base-40: #a3a3a3;
+  --base-30: #bdbdbd;
+  --base-20: #d6d6d7;
+  --base-10: #efefef;
+  --base-0: #f9f9f9;
   --indigo-500: 99, 102, 241;
   --indigo-600: 79, 70, 229;
   --indigo-700: 67, 56, 202;
+  --indigo-400: 129, 140, 248;
+  --grey-700: 64, 64, 64;
   --grey-900: 23, 23, 23;
   --grey-100: 245, 245, 245;
 
@@ -42,8 +57,48 @@
   --cta-branded-border-hover: var(--accent-brand-darker);
 
   --profile-brand-color: rgb(var(--black));
-  --base-60: #717171;
   --card-bg: rgb(var(--white));
   --card-border: rgba(var(--grey-900), 0.1);
+
+}
+
+/* dark variables */
+:host([data-theme="dark"]) {
+  --base-inverted: #000;
+  --base-100: var(--base);
+  --base-90: #efefef;
+  --base-80: #d6d6d7;
+  --base-70: #bdbdbd;
+  --base-60: #a3a3a3;
+  --base-50: #8a8a8a;
+  --base-40: #717171;
+  --base-30: #575757;
+  --base-20: #3d3d3d;
+  --base-10: #242424;
+  --base-0: #090909;
+  --grey-300: 212, 212, 212;
+  --indigo-300: 165, 180, 252;
+  --black: 0, 0, 0;
+  --grey-50: 250, 250, 250;
+
+  --accent-brand-lighter: rgb(var(--indigo-400));
+  --accent-brand: rgb(var(--indigo-500));
+  --accent-brand-darker: rgb(var(--indigo-600));
+  --link-color-current: var(--base-100);
+  --link-color-secondary: var(--base-70);
+  --link-color-secondary-hover: var(--base-80);
+  --link-color: rgb(var(--grey-300));
+  --link-color-hover: rgb(var(--indigo-300));
+  --card-bg: rgb(var(--grey-900));
+  --card-border: rgba(var(--white), 0.15);
+  --body-bg: rgb(var(--black));
+  --body-color: rgb(var(--grey-50));
+  --body-color-inverted: rgb(var(--black));
+  --cta-branded-bg: transparent;
+  --cta-branded-bg-hover: rgb(var(--indigo-600));
+  --cta-branded-color: rgb(var(--indigo-400));
+  --cta-branded-color-hover: rgb(var(--white));
+  --cta-branded-border: rgb(var(--indigo-400));
+  --cta-branded-border-hover: rgb(var(--indigo-500));
 
 }
