--- a/src/github/styles/user.css
+++ b/src/github/styles/user.css
@@ -62,7 +62,7 @@ section[itemscope] {
     display: block;
     text-align: center;
     align-items: center;
-    padding: calc(var(--row-spacing) * 2) 0;
+    padding: var(--row-spacing) 0;
 
     [itemprop="image"] {
       display: block;
@@ -122,7 +122,7 @@ section[itemscope] {
   }
 
   [itemprop="description"] {
-    margin: calc(var(--row-spacing) * 2) 0;
+    margin-bottom: var(--row-spacing);
   }
 
   & dl:has([itemprop="follows"]),
