:sparkles: Release microdata changes

--- a/README.hbs
+++ b/README.hbs
@@ -6,6 +6,7 @@ Web components which display profile information from various websites
 * install via npm: `npm i profile-components`
 * play with the components in [Storybook](https://scottnath.github.io/profile-components)
 * [See demos on stackblitz](https://stackblitz.com/edit/profile-components)
+* [Open repo in stackblitz](https://stackblitz.com/github/scottnath/profile-components)
 
 ## Components
 
